# PeekShell

./: .env.example  .gitignore  AGENTS.md  Note.md  Plan.md  Preview.html  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  开发规范.md
.github/back/: build.yml
.github/workflows/: build.yml
docs/: index.md  sponsor.md
docs/.vitepress/config/: en.ts  index.ts  seo.ts  shared.ts  zh.ts
docs/.vitepress/theme/: custom.css
docs/en/: index.md  sponsor.md
docs/en/guide/: ai-agent.md  getting-started.md  hosts.md  index.md  remote-explorer.md  terminal.md
docs/guide/: ai-agent.md  getting-started.md  hosts.md  index.md  remote-explorer.md  terminal.md
scripts/: update.json  zip.cjs
src/: App.vue  disableBrowserFind.ts  disableNativeInputHints.ts  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_config.rs  credentials.rs  error.rs  hosts.rs  lib.rs  local_fs.rs  main.rs  ssh.rs
src-tauri/src/agent/: audit.rs  llm.rs  mod.rs  policy.rs  schema.rs
src-tauri/src/utils/: init.rs
src/api/: tauri.ts
src/assets/logos/: logo.icns
src/components/: AiPanel.vue  AiSettingsModal.vue  AppSelect.vue  CommandApproveCard.vue  ConnectModal.vue  DisplaySettingsModal.vue  EditorSettingsModal.vue  ExplorerKindIcon.vue  ExplorerSettingsModal.vue  HostListModal.vue  HostSidebar.vue  PreviewCodeEditor.vue  QuickCommandsPanel.vue  RemoteExplorer.vue  TerminalPanel.vue  TerminalSettingsModal.vue
src/editor/: language.ts
src/i18n/: index.ts  messages.ts
src/stores/: ai.ts  editorPrefs.ts  explorerPrefs.ts  hosts.ts  quickCommands.ts  sessions.ts  terminalPrefs.ts  transfers.ts  ui.ts
src/styles/: app.css
src/terminal/: cjk.ts  ptyFilter.ts  shellDetect.ts  tabComplete.ts  terminalAiSession.ts
src/types/: ai.ts  host.ts  quickCommand.ts
