[package]
name = "peekshell"
version = "0.1.0"
description = "Lightweight SSH client with AI assist"
authors = ["PeekShell"]
edition = "2021"

[lib]
name = "peekshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net"] }
dirs = "6"
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "linux-native-sync-persistent",
    "crypto-rust",
] }
chrono = { version = "0.4", features = ["serde"] }
russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"
