[package]
name = "peekshell"
version = "0.1.0"
description = "Lightweight SSH client with AI assist"
authors = ["PeekShell"]
edition = "2021"

[lib]
name = "peekshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
russh = "0.45"
russh-keys = "0.45"
async-trait = "0.1"
tauri-plugin-clipboard-manager = "2.3.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
base64 = "0.22"
